[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-scraper"
version = "0.1.0"
description = "Generic decision-maker scraper - finds owners, CEOs, founders from any website"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.8.0",
    "pydantic>=2.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
decision-scraper = "decision_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
